Prevent wrapping ISBN and page counts

--- a/site/content/stylesheets/_typography.scss
+++ b/site/content/stylesheets/_typography.scss
@@ -140,3 +140,4 @@ blockquote {
 
 section > header h1 { @include text-size($section-heading-size); }
 
+.nobreak { white-space: nowrap; }
